# book_club

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  health.py
backend/app/core/: __init__.py  config.py  db.py  deps.py  exceptions.py  security.py
backend/app/core/http/: __init__.py  base_client.py
backend/app/core/storage/: __init__.py  r2_client.py
backend/app/domains/: __init__.py
backend/app/domains/auth/: __init__.py  models.py  ports.py  providers.py  repository.py  router.py  schemas.py  service.py
backend/app/domains/book/: __init__.py  models.py  ports.py  providers.py  repository.py  router.py  schemas.py  service.py
backend/app/domains/feed/: __init__.py  events.py  models.py  ports.py  providers.py  repository.py  router.py  schemas.py  service.py
backend/app/domains/notification/: __init__.py  models.py  ports.py  providers.py  repository.py  router.py  schemas.py  service.py  service_router.py
backend/app/domains/reading/: __init__.py  events.py  grade_policy.py  models.py  ports.py  providers.py  repository.py  router.py  schemas.py  service.py  streak_policy.py
backend/app/shared/: __init__.py  event_bus.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_init.py  0002_auth_tables.py  0003_book_tables.py  0004_reading_tables.py  0005_feed_tables.py  0006_notification_tables.py  0007_grade_tier.py
backend/tests/: conftest.py  test_health.py
backend/tests/core/: test_deps.py  test_http_client.py  test_security.py
backend/tests/domains/auth/: conftest.py  test_apple_adapter.py  test_kakao_adapter.py  test_models.py  test_repository.py  test_router.py  test_service.py
backend/tests/domains/book/: conftest.py  test_composite_adapter.py  test_kakao_adapter.py  test_models.py  test_naver_adapter.py  test_repository.py  test_router.py  test_service.py
backend/tests/domains/feed/: conftest.py  test_repository.py  (+3 more)
backend/tests/shared/: test_event_bus.py
(+252 files in other folders)
